@@ -25,12 +25,12 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import org.eclipse.jdt.annotation.NonNull;
 import org.junit.Before;
 import org.junit.Test;
 import org.onap.ccsdk.features.sdnr.wt.devicemanager.openroadm.impl.PmDataBuilderOpenRoadm;
@@ -57,18 +57,17 @@ import org.opendaylight.yang.gen.v1.http.org.openroadm.pm.types.rev191129.PmName
 import org.opendaylight.yang.gen.v1.http.org.openroadm.pm.types.rev191129.Validity;
 import org.opendaylight.yang.gen.v1.http.org.openroadm.resource.types.rev191129.ResourceTypeEnum;
 import org.opendaylight.yang.gen.v1.urn.ietf.params.xml.ns.yang.ietf.yang.types.rev130715.DateAndTime;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.data.provider.rev201110.Pmdata15mEntity;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.data.provider.units.rev200413.Celsius;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.data.provider.units.rev200413.PerformanceMeasurementUnitId;
 import org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.network.topology.rev131021.NodeId;
-import org.opendaylight.yangtools.yang.binding.DataObject;
+import org.opendaylight.yangtools.binding.DataObjectStep;
 import org.opendaylight.yangtools.yang.binding.InstanceIdentifier;
-import org.opendaylight.yangtools.yang.binding.InstanceIdentifier.PathArgument;
 import org.opendaylight.yangtools.yang.common.Uint16;
 import org.opendaylight.yangtools.yang.common.Uint64;
 
 
 public class TestOpenRoadmPMDataBuilder {
+
     // variables
     // end of variables
     private NetconfBindingAccessor acessor = mock(NetconfBindingAccessor.class);
@@ -91,13 +90,11 @@ public class TestOpenRoadmPMDataBuilder {
             new HashMap<HistoricalPmEntryKey, HistoricalPmEntry>();
 
 
-
     // public methods
     @Before
     public void init() {
         when(acessor.getDataBroker()).thenReturn(dataBroker);
         when(acessor.getTransactionUtils()).thenReturn(transactionUtils);
-
 
 
     }
@@ -109,10 +106,10 @@ public class TestOpenRoadmPMDataBuilder {
 
         final Class<HistoricalPmList> pmDataClass = HistoricalPmList.class;
         InstanceIdentifier<HistoricalPmList> pmDataListId = InstanceIdentifier.builder(pmDataClass).build();
-                when(acessor.getTransactionUtils().readData(acessor.getDataBroker(), LogicalDatastoreType.OPERATIONAL,
-                        pmDataListId)).thenReturn(historicalPmDatalist);
+        when(acessor.getTransactionUtils().readData(acessor.getDataBroker(), LogicalDatastoreType.OPERATIONAL,
+                pmDataListId)).thenReturn(historicalPmDatalist);
 
-        assertEquals(historicalPmDatalist,pmDataBuilderORoadm.getPmData(acessor));
+        assertEquals(historicalPmDatalist, pmDataBuilderORoadm.getPmData(acessor));
 
     }
 
@@ -132,22 +129,9 @@ public class TestOpenRoadmPMDataBuilder {
         when(historicalPm.getMeasurement()).thenReturn(measurementData);
 
         historicalPMCollection.put(historicalPmBuilder.key(), historicalPmBuilder.build());
-        PathArgument pa =new PathArgument() {
 
-            @Override
-            public int compareTo(PathArgument o) {
-                // TODO Auto-generated method stub
-                return 0;
-            }
-
-            @Override
-            public @NonNull Class<? extends DataObject> getType() {
-                // TODO Auto-generated method stub
-                return Component.class;
-            }
-        };
-        historicalPmEntryBuiler.setPmResourceInstance(InstanceIdentifier.unsafeOf(Arrays.asList(pa)))
-        .setPmResourceTypeExtension("dshjdekjdewkk")
+        historicalPmEntryBuiler.setPmResourceInstance(InstanceIdentifier.unsafeOf(List.of(DataObjectStep.of(
+                        Component.class))).toIdentifier()).setPmResourceTypeExtension("dshjdekjdewkk")
                 .setPmResourceType(ResourceTypeEnum.CircuitPack).setHistoricalPm(historicalPMCollection);
 
         historicalPmEntryCollection.put(historicalPmEntryBuiler.key(), historicalPmEntryBuiler.build());
@@ -155,6 +139,7 @@ public class TestOpenRoadmPMDataBuilder {
 
         assertNotNull(pmDataBuilderORoadm.buildPmDataEntity(historicalPmDatalist));
     }
+
     @Test
     public void testBuildPmDataEntity1() {
         when(acessor.getNodeId()).thenReturn(nodeId);
@@ -169,23 +154,11 @@ public class TestOpenRoadmPMDataBuilder {
         historicalPmBuilder.setType(PmNamesEnum.ErroredSeconds).setDirection(Direction.Rx)
                 .setExtension("sajhsiwiduwugdhegdeuz").setLocation(Location.FarEnd).setMeasurement(measurementData);
         when(historicalPm.getMeasurement()).thenReturn(measurementData);
-        PathArgument pa =new PathArgument() {
 
-            @Override
-            public int compareTo(PathArgument o) {
-                // TODO Auto-generated method stub
-                return 0;
-            }
-
-            @Override
-            public Class<? extends DataObject> getType() {
-                // TODO Auto-generated method stub
-                return Component.class;
-            }
-        };
         historicalPMCollection.put(historicalPmBuilder.key(), historicalPmBuilder.build());
-        historicalPmEntryBuiler.setPmResourceInstance(InstanceIdentifier.unsafeOf(Arrays.asList(pa)))
-            .setPmResourceTypeExtension("dshjdekjdewkk")
+        historicalPmEntryBuiler.setPmResourceInstance(
+                        InstanceIdentifier.unsafeOf(Arrays.asList(DataObjectStep.of(
+                                Component.class))).toIdentifier()).setPmResourceTypeExtension("dshjdekjdewkk")
                 .setPmResourceType(ResourceTypeEnum.Device).setHistoricalPm(historicalPMCollection);
 
         historicalPmEntryCollection.put(historicalPmEntryBuiler.key(), historicalPmEntryBuiler.build());
@@ -194,7 +167,6 @@ public class TestOpenRoadmPMDataBuilder {
         assertNotNull(pmDataBuilderORoadm.buildPmDataEntity(historicalPmDatalist));
     }
     // end of public methods
-
 
     // constants
     // end of constants
@@ -210,7 +182,6 @@ public class TestOpenRoadmPMDataBuilder {
 
     // private methods
     // end of private methods
-
 
     // end of public methods
 
